--- a/index.html
+++ b/index.html
@@ -13,24 +13,40 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="index.css" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <title>HAVA DURUMU</title>
   </head>
   <body>
-    <h1 class="text-center h1 mt-4 mb-5" style="color: azure">HAVA DURUMU</h1>
-    <div class="text-center">
-      <select
-        name="cities"
-        id="cities"
-        class="form-select-sm text-center"
-      >
-        <option value="select">Şehir:</option>
-      </select>
-    </div>
+    <nav><a href="#">ANLIK</a><a href="#">GÜNLÜK</a></nav>
+
+    <h1 class="text-center mt-1" style="color: azure">HAVA DURUMU</h1>
+
     <div class="container text-center">
       <div class="row">
+        <div class="col-sm-6 text-center">
+          <select name="cities" id="cities" class="form-select-sm text-center">
+            <option id="default" value="">Şehir:</option>
+          </select>
+        </div>
+        <div
+          id="search_div"
+          class="col-sm-6 text-center p-2 d-flex flex-column align-items-center"
+        >
+          <div id="inp" class="">
+            <input
+              id="search"
+              type="text"
+              class="text"
+              placeholder="Şehir Giriniz"
+            />
+          </div>
+          <div id="search_data" class="text-center d-none">
+            <ul id="data_list"></ul>
+          </div>
+        </div>
+      </div>
+      <div id="data_row" class="row">
         <div class="col-sm-6">
           <div id="data2" class="text-center"></div>
         </div>
@@ -38,10 +54,7 @@
         <div id="data" class="col-sm-6 text-center"></div>
       </div>
     </div>
-    <footer class="mt-3 text-center">
-      <div class="copyright">
-          
-      </div>
+    <footer class=" text-center mt-4">
     </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
