--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1 class="text-center mt-1" style="color: azure">HAVA DURUMU</h1>
 
     <div class="container text-center">
-      <div class="row">
+      <div class="row mt-4">
         <div class="col-sm-6 text-center">
           <select name="cities" id="cities" class="form-select-sm text-center">
             <option id="default" value="">Şehir:</option>
@@ -47,15 +47,23 @@
         </div>
       </div>
       <div id="data_row" class="row">
+        <h4 style="text-align: start">Anlık</h4>
         <div class="col-sm-6">
           <div id="data2" class="text-center"></div>
         </div>
-
         <div id="data" class="col-sm-6 text-center"></div>
       </div>
+      <div id="data_row2" class="row">
+        <h4 style="text-align: start">Saatlik</h4>
+        <div id="first_hour"></div>
+      </div>
+      <div id="data_row3" class="row">
+        <h4 style="text-align: start">Günlük</h4>
+        <div id="daily"></div>
+      </div>
     </div>
-    <footer class=" text-center mt-4">
-    </footer>
+
+    <footer class="text-center mt-4"></footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
